# racoon-O-vision

./: LICENSE  README.md  pyproject.toml
app/: Dockerfile  app.py
data/: processing.py
racoon/: coco_eval.py  coco_utils.py  engine.py
racoon/model/: miguel.py  transforms.py
racoon/model/data/: _annotations.csv  racoon.py
