[tool.poetry]
name = "racoon-o-vision"
version = "0.1.0"
description = ""
authors = ["serinir <imadom568@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "racoon_o_vision"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
torchvision = "^0.14.1"
gradio = "^3.15.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
